Fix crashes in urlChanged signal handlers

If a user initiates page load from a urlChanged signal handler
after a failed navigation while still being in
NavigationRequest::OnRequestFailedInternal(), the new page load can
discard the pending navigation entry and delete the NavigationRequest
instance before finishing execution of OnRequestFailedInternal().

Fix crash by returning to the event loop before emitting
urlChanged signal.

Task-number: QTBUG-78490
Change-Id: I849a609f5524d715769079f6c5cabf8db6b45944
Reviewed-by: Michal Klocek <michal.klocek@qt.io>